@@ -22,17 +22,24 @@
     <td>{{ ticket.get_priority_display }}</td>
 </tr>
 
+{% if tags_enabled %}
 <tr class='row_even'>
+    <th>{% trans "Tags" %}</th>
+    <td>{{ ticket.tags }}</td>
+</tr>
+{% endif %}
+
+<tr class='row_{% if tags_enabled %}odd{% else %}even{% endif %}'>
     <th colspan='2'>{% trans "Description" %}</th>
 </tr>
-<tr class='row_odd'>
+<tr class='row_{% if tags_enabled %}odd{% else %}even{% endif %}'>
     <td colspan='2'>{{ ticket.description|linebreaksbr }}</td>
 </tr>
 
-{% if ticket.resolution %}<tr class='row_even'>
+{% if ticket.resolution %}<tr class='row_{% if tags_enabled %}even{% else %}odd{% endif %}'>
     <th colspan='2'>{% trans "Resolution" %}{% ifequal ticket.get_status_display "Resolved" %} <a href='{{ request.get_full_path }}&close'><img src='{{ MEDIA_URL }}/helpdesk/buttons/accept.png' alt='{% trans "Accept" %}' title='{% trans "Accept and Close" %}' width='60' height='15' /></a>{% endifequal %}</th>
 </tr>
-<tr class='row_odd'>
+<tr class='row_{% if tags_enabled %}even{% else %}odd{% endif %}'>
     <td colspan='2'>{{ ticket.resolution }}</td>
 </tr>{% endif %}
 
